Fixes for single image display Landscape was okay, portrait was way too large

--- a/styles/Gallery.module.css
+++ b/styles/Gallery.module.css
@@ -19,8 +19,12 @@
 .single{
     position: relative;
     width: 100%;
-    height: 100%;
     object-fit: contain;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: flex-start;
 }
 
 .image{
